--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="red">#ED5151</color>
+    <color name="yellow">#FFB546</color>
+    <color name="green">#5ACB32</color>
+    <color name="white">#FFFCF8</color>
+    <color name="darkBlue">#0C243E</color>
 </resources>
