--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="green">#5ACB32</color>
     <color name="white">#FFFCF8</color>
     <color name="darkBlue">#0C243E</color>
+    <color name="background">#FFF9EB</color>
 </resources>
