--- a/app/src/main/res/layout/note_activity.xml
+++ b/app/src/main/res/layout/note_activity.xml
@@ -21,11 +21,12 @@
     <TextView
         android:id="@+id/textView12"
         android:layout_width="0dp"
-        android:layout_height="112dp"
+        android:layout_height="0dp"
         android:background="@drawable/rectangle_3"
+        app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tela_nota" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -49,101 +50,61 @@
         app:layout_constraintStart_toEndOf="@+id/imageView" />
 
 
-    <EditText
-        android:id="@+id/edtAnotação1"
-        android:layout_width="300dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="263dp"
-        android:layout_marginBottom="424dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/edtAnotação2"
-        android:layout_width="300dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="319dp"
-        android:layout_marginBottom="368dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/edtAnotação4"
-        android:layout_width="300dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="423dp"
-        android:layout_marginBottom="264dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/edtAnotação5"
-        android:layout_width="300dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="475dp"
-        android:layout_marginBottom="212dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        app:layout_constraintBottom_toBottomOf="@+id/tela_nota"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/edtAnotação6"
-        android:layout_width="300dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="527dp"
-        android:layout_marginBottom="160dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        app:layout_constraintBottom_toBottomOf="@+id/tela_nota"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/edtAnotação3"
-        android:layout_width="300dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="371dp"
-        android:layout_marginBottom="316dp"
-        android:background="@drawable/textview"
-        android:ems="10"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@mipmap/ic_buttom_foreground"
+        android:layout_width="82dp"
+        android:layout_height="77dp"
+        android:background="@mipmap/ic_buttom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.947"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="109dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="507dp"
+        android:background="@mipmap/ic_logoff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtAnotação6"
-        app:layout_constraintVertical_bias="0.893" />
+        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+
+    <ListView
+        android:layout_width="347dp"
+        android:layout_height="59dp"
+        android:background="@drawable/textview"
+        android:fontFamily="@font/roboto_mono"
+        app:layout_constraintBottom_toBottomOf="@+id/tela_nota"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        app:layout_constraintVertical_bias="0.312" />
+
+    <Button
+        android:id="@+id/button8"
+        android:layout_width="47dp"
+        android:layout_height="46dp"
+        android:background="@mipmap/ic_time"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.087"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.259" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="47dp"
+        android:layout_height="46dp"
+        android:background="@mipmap/ic_organizeA"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.087"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.185" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
