--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
     <View
         android:id="@+id/Main"
         android:layout_width="wrap_content"
@@ -20,12 +21,25 @@
     <TextView
         android:id="@+id/textView7"
         android:layout_width="428dp"
-        android:layout_height="291dp"
+        android:layout_height="250dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:background="@drawable/rectangle_2"
         app:layout_constraintBottom_toBottomOf="@+id/Main"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="187dp"
+        android:layout_height="167dp"
+        android:background="@mipmap/ic_logored_foreground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.047" />
 
     <TextView
         android:id="@+id/textView8"
@@ -35,7 +49,7 @@
         android:includeFontPadding="true"
         android:text="NoteFull"
         android:textColor="@color/white"
-        android:textSize="60sp"
+        android:textSize="58sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,8 +63,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="Login"
         android:fontFamily="@font/roboto_mono"
+        android:text="Login"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.169"
@@ -76,8 +90,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="Senha"
         android:fontFamily="@font/roboto_mono"
+        android:text="Senha"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.169"
@@ -103,11 +117,11 @@
         android:layout_width="172dp"
         android:layout_height="39dp"
         android:layout_marginTop="40dp"
+        android:background="@drawable/textview"
+        android:fontFamily="@font/roboto_mono"
         android:text="Entrar"
         android:textColor="@color/login"
-        android:fontFamily="@font/roboto_mono"
         android:textStyle="bold"
-        android:background="@drawable/textview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.518"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,16 +153,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView11"
         app:layout_constraintVertical_bias="0.0" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="181dp"
-        android:layout_height="167dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/Main"
-        app:layout_constraintVertical_bias="0.652"
-        app:srcCompat="@mipmap/ic_logored" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
