--- a/app/src/main/res/layout/note_activity.xml
+++ b/app/src/main/res/layout/note_activity.xml
@@ -73,6 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
     <ListView
+        android:id="@+id/listview_notas"
         android:layout_width="347dp"
         android:layout_height="59dp"
         android:background="@drawable/textview"
