--- a/app/src/main/res/layout/new_note_activity.xml
+++ b/app/src/main/res/layout/new_note_activity.xml
@@ -57,7 +57,7 @@
         android:id="@+id/edtNewAnotation"
         android:layout_width="347dp"
         android:layout_height="178dp"
-        android:background="@drawable/largetextview"
+        android:background="@drawable/textviewnote"
         android:ems="10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +69,7 @@
         android:id="@+id/edtTituloNN"
         android:layout_width="343dp"
         android:layout_height="56dp"
-        android:background="@drawable/textview"
+        android:background="@drawable/textviewnote"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +122,7 @@
         android:id="@+id/edtLembrete"
         android:layout_width="98dp"
         android:layout_height="29dp"
-        android:background="@drawable/textview"
+        android:background="@drawable/textviewnote"
         android:ems="10"
         android:inputType="time"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -161,7 +161,7 @@
         android:id="@+id/edtLocalization"
         android:layout_width="267dp"
         android:layout_height="50dp"
-        android:background="@drawable/textview"
+        android:background="@drawable/textviewnote"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
