--- a/app/src/main/res/drawable/rectangle_1.xml
+++ b/app/src/main/res/drawable/rectangle_1.xml
@@ -3,8 +3,8 @@
 
 <item>
     <shape android:shape="rectangle">
-
         <solid android:color="@color/yellow"></solid>
+        <corners> </corners>
 
     </shape>
 </item>
