--- a/app/src/main/res/drawable/textview.xml
+++ b/app/src/main/res/drawable/textview.xml
@@ -9,6 +9,10 @@
     android:viewportHeight="75"
     >
 
+    <stroke
+        android:width="1dp"
+        android:color="@color/darkBlue" />
+
     <group>
 
         <clip-path
