--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
         android:layout_width="300dp"
         android:layout_height="44dp"
         android:layout_marginTop="92dp"
-        android:background="@drawable/textview"
+        android:background="@drawable/textviewnote"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +104,7 @@
         android:layout_width="300dp"
         android:layout_height="44dp"
         android:layout_marginTop="28dp"
-        android:background="@drawable/textview"
+        android:background="@drawable/textviewnote"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
