--- a/app/src/main/res/layout/cadastro.xml
+++ b/app/src/main/res/layout/cadastro.xml
@@ -65,7 +65,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="36dp"
         android:layout_marginBottom="230dp"
-        android:background="@drawable/textview"
+        android:background="@drawable/textviewnote"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -80,7 +80,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="72dp"
         android:layout_marginBottom="311dp"
-        android:background="@drawable/textview"
+        android:background="@drawable/textviewnote"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -94,7 +94,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="528dp"
         android:layout_marginBottom="152dp"
-        android:background="@drawable/textview"
+        android:background="@drawable/textviewnote"
         android:ems="10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -109,7 +109,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="608dp"
         android:layout_marginBottom="79dp"
-        android:background="@drawable/textview"
+        android:background="@drawable/textviewnote"
         android:ems="10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
